--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,20 @@
 version: 0.2
 
-phases: 
-    build:
-        commands:
-            - echo "Build block"
-            - ls
-            - echo "Running tests to check if "Congratulations" present in index.html file"
-            - grep "Congratulations" index.html
-    post_build:
-        commands:
-            - echo "Post build phase"
-artifacts:
-    files:
-        - '**/*'        
-    discard-paths: yes
+phases:
+  install:
+    commands:
+      - echo "Install phase - nothing to install for static site"
+  build:
+    commands:
+      - echo "Build phase"
+      - ls -R
+      - echo "Checking if 'Congratulations' is present in index.html"
+      - grep "Congratulations" index.html || echo "'Congratulations' not found in index.html"
+  post_build:
+    commands:
+      - echo "Post build phase complete"
 
-            
+artifacts:
+  files:
+    - '**/*'
+  discard-paths: no  # Preserve directory structure so scripts/ folder is deployed correctly
